--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         Sorry, your browser does not support HTML5 canvas technology.
     </canvas>
 
+    <button id="clear">Clear</button>
+
     <script src="app.js"></script>
 </body>
 
